# Grip

./: .gitignore  404.html  CALIBRATION_README.md  FILTER_IMPLEMENTATION_SUMMARY.md  FILTER_STRATEGY_GUIDE.md  README.md  SAMPLING_RATE_FIX_SUMMARY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  test_filter_integration.py
arduino/: README.md
arduino/sensor_pwm/: port_controller.ino  (+2 more)
arduino_ide/: Example_01_analogRead_SINGLE.ino
data/: integrated_data_20251016_182851.csv  integrated_data_20251016_192504.csv  integrated_data_20251021_180428.csv  integrated_data_20251030_195505.csv  integrated_data_20251104_182909.csv  integrated_data_20251104_183059.csv
data_collection/: README.md  requirements.txt
docs/: calibration_architecture.md  calibration_guide.md  calibration_implementation.md  calibration_quick_reference.md  integrated_data_collection.md  uart.md
microcontroller/: README.md
models/: best_lstm_model.pth  lstm_model_final.pth
myowear_reader/: CMakeLists.txt
rpi/: README.md  requirements.txt
search/: search_index.json
src/: LSTM.ipynb  calibration_helpers.py  calibration_manager.py  calibration_tool.py  calibration_workflow.py  data_collector.py  hand_movement_YOLO.py  integrated_data_collector.py  servo_control.py  uart.py  ui_utils.py
tests/: test_calibration.py
training/: DATA_PROCESSING_ORDER.md  README.md  filter_strategies.py  inference_realtime.py  inference_streaming.py  inference_streaming2.py  requirements.txt
uart/: index.html
vision_calibration/: calibration_left_hand.csv  calibration_right_hand.csv
(+104 files in other folders)
