[project]
name = "Grip"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = [
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pyfirmata2>=2.5.1",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
    "pyside6>=6.9.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.19.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
